adjusted the code structure for handlers

--- a/serverless-trivia-backend/in-game-experience/serverless.yml
+++ b/serverless-trivia-backend/in-game-experience/serverless.yml
@@ -11,7 +11,7 @@ provider:
 
 functions:
   hello:
-    handler: index.hello
+    handler: handlers/index.hello
     events:
       - http:
           path: hello-world
