--- a/serverless-trivia-backend/leaderboards/serverless.yml
+++ b/serverless-trivia-backend/leaderboards/serverless.yml
@@ -9,4 +9,9 @@ provider:
 
 functions:
   hello:
-    handler: handler.hello
+    handler: handler/handler.hello
+    events:
+      - http:
+          path: hello-world
+          method: get
+          cors: true
