--- a/serverless-trivia-backend/trivia-game-lobby/serverless.yml
+++ b/serverless-trivia-backend/trivia-game-lobby/serverless.yml
@@ -10,4 +10,9 @@ provider:
 
 functions:
   hello:
-    handler: handler.hello
+    handler: handler/handler.hello
+    events:
+      - http:
+          path: hello-world
+          method: get
+          cors: true
