--- a/serverless-trivia-backend/leaderboards/serverless.yml
+++ b/serverless-trivia-backend/leaderboards/serverless.yml
@@ -9,7 +9,7 @@ provider:
 
 functions:
   hello:
-    handler: handler/handler.hello
+    handler: handlers/handler.hello
     events:
       - http:
           path: hello-world
