--- a/serverless-trivia-backend/team-management/serverless.yml
+++ b/serverless-trivia-backend/team-management/serverless.yml
@@ -11,7 +11,7 @@ provider:
 
 functions:
   hello:
-    handler: handler/handler.hello
+    handler: handlers/handler.hello
     events:
       - http:
           path: hello-world
