--- a/serverless-trivia-backend/trivia-content-management/package.json
+++ b/serverless-trivia-backend/trivia-content-management/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "serverless-offline": "^12.0.4"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1415.0"
   }
 }
