--- a/serverless-trivia-backend/user-profile-management/package.json
+++ b/serverless-trivia-backend/user-profile-management/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "serverless-offline": "^12.0.4"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1415.0",
+    "uuid": "^9.0.0"
   }
 }
