--- a/serverless-trivia-backend/team-management/serverless.yml
+++ b/serverless-trivia-backend/team-management/serverless.yml
@@ -1,28 +1,23 @@
+service: teamManagement
 
-service: team-management
-frameworkVersion: "3"
+frameworkVersion: '3'
 
-plugins:
-  - serverless-offline
+custom:
+  wsgi:
+    app: app.app
 
 provider:
   name: aws
-  runtime: nodejs18.x
-  region: us-east-1
-  stage: dev
-  iamRoleStatements:
-    - Effect: 'Allow'
-      Action:
-        - 'sns:*'
-        - 'sqs:*'
-      Resource: '*'
-  role: arn:aws:iam::<account-id>:role/LabRole
+  runtime: python3.9
+  iam:
+    role: arn:aws:iam::507485638797:role/LabRole
 
 functions:
-  hello:
-    handler: handlers/handler.hello
+  api:
+    handler: wsgi_handler.handler
     events:
-      - http:
-          path: hello-world
-          method: get
-          cors: true
+      - httpApi: '*'
+
+plugins:
+  - serverless-wsgi
+  - serverless-python-requirements
