--- a/serverless-trivia-frontend/.env
+++ b/serverless-trivia-frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL=https://dlfhhqwty0.execute-api.us-east-1.amazonaws.com/dev
+REACT_APP_USER_AUTHENTICATION_API_URL=https://dlfhhqwty0.execute-api.us-east-1.amazonaws.com/dev
+REACT_APP_IN_GAME_EXP_API_URL=https://pyx02fp6l5.execute-api.us-east-1.amazonaws.com/dev
