--- a/serverless-trivia-backend/in-game-experience/package.json
+++ b/serverless-trivia-backend/in-game-experience/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "serverless-offline": "^12.0.4"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
