--- a/serverless-trivia-backend/trivia-content-management/package.json
+++ b/serverless-trivia-backend/trivia-content-management/package.json
@@ -12,6 +12,9 @@
     "serverless-offline": "^12.0.4"
   },
   "dependencies": {
-    "aws-sdk": "^2.1415.0"
+    "@google-cloud/firestore": "^6.7.0",
+    "aws-sdk": "^2.1428.0",
+    "axios": "^1.4.0",
+    "node-fetch": "^3.3.2"
   }
 }
