--- a/serverless-trivia-backend/in-game-experience/package.json
+++ b/serverless-trivia-backend/in-game-experience/package.json
@@ -12,6 +12,8 @@
     "serverless-offline": "^12.0.4"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "aws-sdk": "^2.1430.0",
+    "axios": "^1.4.0",
+    "uuid": "^9.0.0"
   }
 }
