--- a/serverless-trivia-backend/in-game-experience/serverless.yml
+++ b/serverless-trivia-backend/in-game-experience/serverless.yml
@@ -20,7 +20,7 @@ provider:
   role: arn:aws:iam::694195453932:role/LabRole
 
 functions:
-  add-user:
+  get-game-questions:
     handler: handlers/get-questions.handler
     description: GET /game-questions
     events:
@@ -33,3 +33,78 @@ functions:
             parameters:
               querystrings:
                 game_id: true
+  get-game-details:
+    handler: handlers/get-game-details.handler
+    description: GET /get-game-details
+    events:
+      - http:
+          path: get-game-details
+          method: get
+          cors:
+            origin: '*'
+          request:
+            parameters:
+              querystrings:
+                game_id: true
+  get-user-score:
+    handler: handlers/get-user-score.handler
+    description: GET /get-user-score
+    events:
+      - http:
+          path: get-user-score
+          method: get
+          cors:
+            origin: '*'
+          request:
+            parameters:
+              querystrings:
+                user_id: true
+  store-user-score:
+    handler: handlers/store-user-score.handler
+    description: POST /store-user-score
+    events:
+      - http:
+          path: store-user-score
+          method: post
+          cors:
+            origin: '*'
+  store-team-score:
+    handler: handlers/store-team-score.handler
+    description: POST /store-team-score
+    events:
+      - http:
+          path: store-team-score
+          method: post
+          cors:
+            origin: '*'
+
+resources:
+  Resources:
+    GamePlayedUserTable:
+      Type: 'AWS::DynamoDB::Table'
+      DeletionPolicy: Retain
+      Properties:
+        TableName: GamePlayedUserTable
+        AttributeDefinitions:
+          - AttributeName: game_played_id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: game_played_id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5
+    GamePlayedTeamTable:
+      Type: 'AWS::DynamoDB::Table'
+      DeletionPolicy: Retain
+      Properties:
+        TableName: GamePlayedTeamTable
+        AttributeDefinitions:
+          - AttributeName: game_played_id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: game_played_id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 5
+          WriteCapacityUnits: 5
